# zero2prodrust

./: Cargo.toml
.github/workflows/: general.yml
migrations/: 20210801182448_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscribe.rs  utils.rs
